# blog

./: .gitignore  .gitmodules  .jekyll-metadata  .travis.yml  CNAME  README.md  _config.yml  about.md  archive.md  before_deploy.sh  deploy.sh  feed.xml  id_rsa.enc  index.html  mkdocs.yml  params.json  pyproject.toml  tags.md
_drafts/: 2017-04-30-study-contacts.md  2017-05-14-study-oauth.md  2017-10-22-build-tools-bazel.md  2017-10-22-tensorflow-foreword.md  2017-10-22-tools-as-intro-plugin.md  2017-10-22-tools-as-product-plugin.md  2017-12-06-aosp-blueprint-soong.md  2018-03-14-resume.md  2018-03-23-application-popupwindow-window.md
_includes/: footer.html  google-analytics.html  header.html  sidebar.html  social.html
_layouts/: home.html  page.html  post.html
_posts/: 2016-04-19-rebuild-future.md  2016-10-10-rebuild-future.md  2016-10-11-elementary-mind-Python.md  2016-10-11-mind-Python.md  2017-03-18-elementary-network-protocol.md  2017-03-18-network.md  2017-04-12-study-repo.md  2017-04-12-tools-study-repo.md  2017-04-16-study-smali.md  2017-04-29-elementary-using-AS-reading-code.md  2017-04-29-study-AS.md  2017-05-14-study-oauth.md  2017-09-23-aosp-translate-blueprint-soong.md  2017-09-23-elementary-get-aosp.md  2017-09-23-get-AOSP.md  2017-09-23-translate-blueprint-soong.md  2017-09-24-Duplex-Mode.md  2017-09-24-elementary-network-type.md  2017-10-22-Android-build-tools-bazel.md  2017-10-22-Android-build-tools-gnumake.md  (+26 more)
_site/: about.html  (+5 more)
plugins/jplugin/: pyproject.toml  setup.py
plugins/jplugin/src/: __init__.py
plugins/jplugin/src/e/: plugin.py
(+514 files in other folders)
