[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "jplugin"
version = "1.0.0"
description = "jplugin"
authors = ["electrolyteJ <hawks.jamesf@gmail.com>"]
license = "Apache2"
packages = [{ include = "e", from = 'src' }]

[tool.poetry.dependencies]
python = "^3.10"
#mkdocs = "^1.4.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"

[tool.poetry.plugins."mkdocs.plugins"]
jplugin = 'e.plugin:JPlugin'


